--- a/style.css
+++ b/style.css
@@ -1,4 +1,26 @@
 .form{
     background-color: #c8b59a;
+   
 }
+.pad{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+   }
+.form-input{
+    width: 300px;
+    height: 33px;
+    border-radius: 4px;
+    outline: none;
+    border: 1px solid rgb(202, 199, 199);
+}
+.form-input::placeholder{
+    padding-left: 10px;
+}
+.login-form{
+    display: none;
+}
+
    
