--- a/style.css
+++ b/style.css
@@ -20,7 +20,33 @@
     padding-left: 10px;
 }
 .login-form{
+    /* display: none; */
+}
+.submit{
+    width: 100%;
+    color: white;
+    background-color: #0f1b4f;
+    border: none;
+    border-radius: 4px;
+    font-size: 20px;
+    padding: 10px 0;
+    margin-bottom: 50px;
+    
+}
+.signup-form{
     display: none;
 }
+@media only screen and (max-width: 600px){
+    .form-pad{
+        padding-left: 2.8rem !important;
+        height: 50rem;
+    }
+    .pad{
+        height: 50vh;
+    }
+}
+    
+
+
 
    
