--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     flex-direction: column;
    }
 .form-input{
-    width: 300px;
+    width: 100%;
     height: 33px;
     border-radius: 4px;
     outline: none;
@@ -20,10 +20,10 @@
     padding-left: 10px;
 }
 .login-form{
-    /* display: none; */
+    display: none;
 }
 .submit{
-    width: 100%;
+    width: 75%;
     color: white;
     background-color: #0f1b4f;
     border: none;
@@ -36,15 +36,85 @@
 .signup-form{
     display: none;
 }
+.start-form{
+    /* display: none; */
+}
+.form-f{
+    height: 100vmin;
+}
+.head-1 p{
+    font-size: 35px;
+    font-weight: 900;
+    padding: 42px 0;
+    margin: 0;
+
+}
+.btn-1{
+    border: none;
+    background-color: #0f1b4f;
+    color: white;
+    padding: 8px 14px;
+    border-radius: 6px;
+    font-size: 17px;
+    margin: 0 10px;
+}
 @media only screen and (max-width: 600px){
     .form-pad{
-        padding-left: 2.8rem !important;
-        height: 50rem;
+        padding: 0 3.8rem !important
+       
     }
-    .pad{
-        height: 50vh;
-    }
+   .pad{
+    height: 50vh;
+   }
+   .submit{
+    width: 100%;
+    
+   }
+   .form-f{
+    height: 108vmin;
+   }
+
 }
+@media only screen and (min-width: 768px){
+    .form-pad{
+        padding-left: 0 !important;
+        height: 43vh;
+       
+    }
+   .pad{
+    height: 50vh;
+   }
+   .login-form .form-input{
+    width: 75%;
+}
+  
+}
+@media only screen and (min-width: 992px){
+    .form-pad{
+        padding: 0 2.8rem !important;
+        height: auto;
+       
+    }
+   .pad{
+    height: 100vh;
+   }
+   .submit{
+    margin-bottom: 75px;
+   }
+   .form-input{
+    width: 100%;
+    height: 33px;
+    border-radius: 4px;
+    outline: none;
+    border: 1px solid rgb(202, 199, 199);
+}
+.login-form .form-input{
+    width: 75%;
+}
+   
+}
+
+
     
 
 
