--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
    
 }
 .pad{
-    height: 100vh;
+    height: 50vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,25 +19,28 @@
 .form-input::placeholder{
     padding-left: 10px;
 }
-.login-form{
-    display: none;
-}
+
 .submit{
-    width: 75%;
+    width: 100%;
     color: white;
     background-color: #0f1b4f;
     border: none;
     border-radius: 4px;
     font-size: 20px;
     padding: 10px 0;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     
 }
-.signup-form{
-    display: none;
+.width{
+    width: 100%;
 }
-#frist-form{
-    /* display: none; */
+.head{
+    font-size: 40px;
+    font-weight: 900;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    margin: 0;
+    text-transform: capitalize;
 }
 .form-f{
     height: 100vmin;
@@ -58,12 +61,13 @@
     font-size: 17px;
     margin: 0 10px;
 }
-.eye {
-    position: relative;
-    bottom: 0;
-    right: 27px;
-    text-align: right;
-}
+
+    .eye {
+        position: relative;
+        bottom: 25px;
+        right: 14px;
+        float: right;
+    }
 #eye-2{
     display: none;
 }
@@ -81,18 +85,18 @@
     right: 354px ;
     text-align: right;
 }
+.borders {
+    border: #c8b59a solid 4px;
+    border-radius: 8px;
+    box-shadow: -2px 2px 17px rgb(143, 143, 143);
+    padding: 20px;
+    margin-top: 20px;
+}
+.image-logo{
+    position: relative;
+    top: 0;
+}
 @media only screen and (max-width: 767px){
-    .form-pad{
-        padding: 0 3.8rem !important
-       
-    }
-   .pad{
-    height: 50vh;
-   }
-   .submit{
-    width: 100%;
-    
-   }
    .form-f{
     height: 108vmin;
    }
@@ -111,30 +115,12 @@
 .eye-f {
     position: relative;
    
-    bottom: 25px;
+    bottom: 49px;
     right: 15px;
     float: right;
 }
-
 }
 @media only screen and (min-width: 768px){
-    .form-pad{
-        padding-left: 0 !important;
-        height: 43vh;
-       
-    }
-   .pad{
-    height: 50vh;
-   }
-   .login-form .form-input{
-    width: 75%;
-}
-.eye {
-    position: relative;
-    bottom: 0;
-    right: 28px;
-    text-align: right;
-}
 .eye-e {
     position: relative;
     bottom: 24px;
@@ -143,58 +129,26 @@
 }
 .eye-f {
     position: relative;
-    bottom: 25px;
+    bottom: 49px;
     right: 10px;
     float: right !important;
 }
-  
+.width{
+    width: 65%;
+}
 }
 @media only screen and (min-width: 992px){
-    .form-pad{
-        padding: 0 2.8rem !important;
-        height: auto;
-       
-    }
+   
    .pad{
     height: 100vh;
    }
-   .submit{
-    margin-bottom: 75px;
-   }
-   .form-input{
-    width: 100%;
-    height: 33px;
-    border-radius: 4px;
-    outline: none;
-    border: 1px solid rgb(202, 199, 199);
-}
-.login-form .form-input{
-    width: 75%;
-}
-.eye {
-    position: relative;
-    bottom: 0;
-    right: 27px;
-    text-align: right;
-}
-.eye-f {
-    position: relative;
-    /* bottom: -11px; */
-    /* right: 364px; */
-    float: right !important;
-}
 .eye-e {
     position: relative;
     bottom: 25px;
-    /* right: 69px; */
+ 
     float: right;
 }
-   
+.width{
+    width: 35%;
 }
-
-
-    
-
-
-
-   
+}
