--- a/style.css
+++ b/style.css
@@ -92,9 +92,16 @@
     padding: 10px 20px;
     margin-top: 20px;
 }
-.image-logo{
+.eye-d {
     position: relative;
-    top: 0;
+    bottom: 47px;
+    right: 10px;
+    float: right !important;
+}
+
+
+#eye-3{
+  display: none;
 }
 @media only screen and (max-width: 767px){
    .form-f{
@@ -112,6 +119,7 @@
     right: 15px;
     float: right;
 }
+
 .eye-f {
     position: relative;
    
