--- a/admin dashboard/css/style.css
+++ b/admin dashboard/css/style.css
@@ -161,6 +161,25 @@
     margin: auto;
 
   }
+  table, th, td {
+    border: 2px solid #a5a3a3;
+    border-radius: 3px;
+    color: black;
+    word-wrap: break-word;
+  }
+  table{
+    width: 97%;
+    border-collapse: collapse;
+    margin: 20px auto;
+  }
+  .contain-t{
+    border: 1px solid rgb(182, 176, 176);
+    margin: 30px 20px;
+    padding-top: 15px;
+    border-radius: 5px;
+    box-shadow: -6px 6px 20px;
+    height: 80%;
+  }
 @media only screen and (max-width: 767px){
    .form-f{
     height: 108vmin;
