--- a/admin dashboard/css/style.css
+++ b/admin dashboard/css/style.css
@@ -180,6 +180,16 @@
     box-shadow: -6px 6px 20px;
     height: 80%;
   }
+  textarea{
+    resize: none;
+    height: 130px;
+  }
+  .notes{
+    margin-top: 70px;
+    padding: 20px;
+    background-color: #faf6f6;
+    color: black;
+  }
 @media only screen and (max-width: 767px){
    .form-f{
     height: 108vmin;
