--- a/admin-dashboard/css/sb-admin-2.css
+++ b/admin-dashboard/css/sb-admin-2.css
@@ -10712,7 +10712,7 @@ a:focus {
   color: rgba(255, 255, 255, 0.5);
 }
 
-.sidebar-dark .nav-item.active .nav-link {
+.sidebar-dark .nav-item.active .nav-link , .bld {
   color: #fff;
 }
 
