--- a/admin-dashboard/css/style.css
+++ b/admin-dashboard/css/style.css
@@ -158,15 +158,25 @@
   }
   #table{
     border: 3px solid #c8b59a;
-    border-radius: 6px;
+    
     height: 70%;
     width: 95%;
     margin: auto;
 
   }
+  thead{
+    position: sticky;
+   
+  }
+  tbody{
+    overflow-y: scroll;
+  }
+  tr:nth-child(even) {
+    background-color: #e0f0f3;
+  }
   table, th, td {
+    text-transform: capitalize !important;
     border: 2px solid #a5a3a3;
-    border-radius: 3px;
     color: black;
     word-wrap: break-word;
 
