error of user database is solved

--- a/admin-dashboard/css/style.css
+++ b/admin-dashboard/css/style.css
@@ -181,6 +181,9 @@
     word-wrap: break-word;
 
   }
+  #datatables td{
+    text-transform: none !important;
+  }
   th{
     background-color: #0f1b4f;
     color: #fff;
