--- a/admin-dashboard/css/style.css
+++ b/admin-dashboard/css/style.css
@@ -297,6 +297,12 @@
   position: absolute;
     left: 23px;
 }
+.veiw{
+  color: #000;
+  font-size: 20px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+}
 
 @media only screen and (max-width: 400px){
   .tv-img {
